test/testdata/classes/methods/static/not_indexable_assignment_error.lox
class Foo {
  static bar() {}
}
Foo.bar[0] = 0; // error: 'function' value is not indexable
